notes and changed file structure

--- a/convergence.html
+++ b/convergence.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Relative Clarity Cue Paper.Js</title>
+  <title>Convergence Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="decagonscript.js" canvas="canvas"></script>
+    <script type="text/paperscript" src="convergencescript.js" canvas="canvas"></script>
   <style>
     #canvas {
       border: 1px solid black;
