--- a/blob.html
+++ b/blob.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Texture Gradient Cue Paper.Js</title>
+  <title>Blob Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="texturegradientscript2.js" canvas="canvas"></script>
+    <script type="text/paperscript" src="blobscript.js" canvas="canvas"></script>
   <style>
     #canvas {
       border: 1px solid black;
