--- a/rasterize.html
+++ b/rasterize.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Relative Clarity Cue Paper.Js</title>
+  <title>Raterize Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="relativeclarityscript.js" canvas="canvas"></script>
+    <script type="text/paperscript" src="rasterizescript.js" canvas="canvas"></script>
   <style>
     #canvas {
       border: 1px solid black;
