added grid 2 (interactive)

--- a/test.html
+++ b/test.html
@@ -5,14 +5,14 @@
   <title>Grid Cue Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="gridscript.js" canvas="canvas"></script>
-  <!-- <style>
+    <script type="text/paperscript" src="testscript.js" canvas="canvas"></script>
+  <style>
     #canvas {
       border: 1px solid black;
       height: 100vh;
       width: 100vw;
     }
-  </style> -->
+  </style>
 </head>
 
 <body>
