--- a/grid2.html
+++ b/grid2.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-  <title>Grid Cue Paper.Js</title>
+  <title>Grid 2 Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="gridscript.js" canvas="canvas"></script>
-  <!-- <style>
+    <script type="text/paperscript" src="grid2script.js" canvas="canvas"></script>
+  <style>
     #canvas {
       border: 1px solid black;
       height: 100vh;
       width: 100vw;
     }
-  </style> -->
+  </style>
 </head>
 
 <body>
