--- a/createblob.html
+++ b/createblob.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Grid Cue Paper.Js</title>
+  <title>Blur.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
-    <script type="text/paperscript" src="gridscript.js" canvas="canvas"></script>
+    <script type="text/paperscript" src="createblobscript.js" canvas="canvas"></script>
   <style>
     #canvas {
       border: 1px solid black;
