grid connected to midi controller

--- a/grid2.html
+++ b/grid2.html
@@ -5,6 +5,7 @@
   <title>Grid 2 Paper.Js</title>
     <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
     <script type="text/javascript" src="dat.gui.min.js"></script>
+    <script type="text/javascript" src="build/launch-control.js"></script>
     <script type="text/paperscript" src="grid2script.js" canvas="canvas"></script>
   <style>
     #canvas {
