--- a/grid.html
+++ b/grid.html
@@ -5,17 +5,17 @@
   <title>Grid Cue Paper.Js</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.4/underscore-min.js"></script>
-    
+
     <script type="text/javascript" src="js/paper.js"></script>
     <!-- <script type="text/javascript" src="js/launch-control.js"></script> -->
-    <script type="text/paperscript" src="js/gridscript.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/gridscript.js" canvas="canvas"></script>
     <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
 
   <style>
-    #canvas {
-      border: 1px solid black;
-      height: 100vh;
-      width: 100vw;
+    body, html, canvas {
+      height: 100%;
+      width: 100%;
+      overflow: hidden !important;
     }
   </style>
 </head>
