--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.4/underscore-min.js"></script>
 
     <script type="text/javascript" src="js/paper.js"></script>
-    <!-- <script type="text/javascript" src="js/launch-control.js"></script> -->
+    <script type="text/javascript" src="js/launch-control.js"></script>
     <script type="text/javascript" src="js/gridscript.js" canvas="canvas"></script>
     <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
 
@@ -16,6 +16,7 @@
       height: 100%;
       width: 100%;
       overflow: hidden !important;
+      background:  black;
     }
   </style>
 </head>
