added hex script file

--- a/hex.html
+++ b/hex.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Hexagon Tool</title>
-    <script type="text/javascript" src="paperjs-v0.12.15/docs/assets/js/paper.js"></script>
-    <script type="text/paperscript" src="hexScript.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/paper.js"></script>
+    <script type="text/paperscript" src="js/hexscript.js" canvas="canvas"></script>
     <style>
         #canvas {
             border: 1px solid black;
