--- a/spotlight.html
+++ b/spotlight.html
@@ -15,7 +15,7 @@
             border: 1px solid black;
             height: 100vh;
             width: 100vw;
-            background-color: black;
+            /* background-color: black; */
         }
     </style>
 </head>
