rerouted invert cue to external haws file

--- a/grid.html
+++ b/grid.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="js/paperjs-v0.12.15/dist/paper-full.js"></script>
     <script type="text/javascript" src="launch/build/launch-control.js"></script>
     <script type="text/javascript" src="js/gridscript.js" canvas="canvas"></script>
-    <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/haws_grid.js" canvas="canvas"></script>
 
   <style>
     body, html, canvas {
