--- a/invert.html
+++ b/invert.html
@@ -8,14 +8,14 @@
 
     <script type="text/javascript" src="js/paperjs-v0.12.15/dist/paper-full.js"></script>
     <script type="text/javascript" src="launch/build/launch-control.js"></script>
-    <script type="text/paperscript" src="js/invertscript.js" canvas="canvas"></script>
-    <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/invertscript.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/haws_invert.js" canvas="canvas"></script>
     <style>
-        #canvas {
-            border: 1px solid black;
-            height: 100vh;
-            width: 100vw;
-            background-color: black;
+        body, html, canvas {
+            height: 100%;
+            width: 100%;
+            overflow: hidden !important;
+            background:  black;
         }
     </style>
 </head>
