--- a/spotlight.html
+++ b/spotlight.html
@@ -11,11 +11,11 @@
     <script type="text/paperscript" src="js/spotlightscript.js" canvas="canvas"></script>
     <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
     <style>
-        #canvas {
-            border: 1px solid black;
-            height: 100vh;
-            width: 100vw;
-            background-color: black;
+        body, html, canvas {
+            height: 100%;
+            width: 100%;
+            overflow: hidden !important;
+            background:  black;
         }
     </style>
 </head>
