--- a/spotlight.html
+++ b/spotlight.html
@@ -8,8 +8,8 @@
 
     <script type="text/javascript" src="js/paperjs-v0.12.15/dist/paper-full.js"></script>
     <script type="text/javascript" src="launch/build/launch-control.js"></script>
-    <script type="text/paperscript" src="js/spotlightscript.js" canvas="canvas"></script>
-    <script type="text/javascript" src="js/haws.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/spotlightscript.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/haws_spotlight.js" canvas="canvas"></script>
     <style>
         body, html, canvas {
             height: 100%;
