--- a/invert.html
+++ b/invert.html
@@ -8,8 +8,9 @@
 
     <script type="text/javascript" src="js/paperjs-v0.12.15/dist/paper-full.js"></script>
     <script type="text/javascript" src="launch/build/launch-control.js"></script>
-    <script type="text/javascript" src="js/invertscript.js" canvas="canvas"></script>
-    <script type="text/javascript" src="js/haws_invert.js" canvas="canvas"></script>
+<!--     <script type="text/javascript" src="js/invertscript.js" canvas="canvas"></script>
+    <script type="text/javascript" src="js/haws_invert.js" canvas="canvas"></script> -->
+    <script type="text/javascript" src="js/haws_invert_cue.js" canvas="canvas"></script>
     <style>
         body, html, canvas {
             height: 100%;
